# flower-classification-mlops

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  train.py
.github/workflows/: cd.yml  ci.yml
config/: config.yaml
runs/experiment/: events.out.tfevents.1761495212.LAPTOP-D70PLQ3S.16460.0  events.out.tfevents.1761497376.LAPTOP-D70PLQ3S.17924.0  events.out.tfevents.1761497861.LAPTOP-D70PLQ3S.10104.0  events.out.tfevents.1761497861.LAPTOP-D70PLQ3S.10104.1  events.out.tfevents.1761498181.LAPTOP-D70PLQ3S.4260.0  events.out.tfevents.1761498181.LAPTOP-D70PLQ3S.4260.1  events.out.tfevents.1761498223.LAPTOP-D70PLQ3S.4260.2  events.out.tfevents.1761525791.LAPTOP-D70PLQ3S.17560.0  events.out.tfevents.1761530215.LAPTOP-D70PLQ3S.10680.0  events.out.tfevents.1761530215.LAPTOP-D70PLQ3S.10680.1  events.out.tfevents.1761530259.LAPTOP-D70PLQ3S.10680.2  events.out.tfevents.1761530430.LAPTOP-D70PLQ3S.3476.0  events.out.tfevents.1761530431.LAPTOP-D70PLQ3S.3476.1  events.out.tfevents.1761530476.LAPTOP-D70PLQ3S.3476.2  events.out.tfevents.1761530582.LAPTOP-D70PLQ3S.712.0  events.out.tfevents.1761530582.LAPTOP-D70PLQ3S.712.1  events.out.tfevents.1761530626.LAPTOP-D70PLQ3S.712.2  events.out.tfevents.1761530939.LAPTOP-D70PLQ3S.152.0  events.out.tfevents.1761530939.LAPTOP-D70PLQ3S.152.1  events.out.tfevents.1761530980.LAPTOP-D70PLQ3S.152.2  events.out.tfevents.1761531055.LAPTOP-D70PLQ3S.7036.0  events.out.tfevents.1761531055.LAPTOP-D70PLQ3S.7036.1  (+1 more)
scripts/: setup_sample_data.py  validate_project.py
src/data/: data_loader.py
(+7 files in other folders)
